--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -11,10 +11,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
+            android:layout_marginTop="@dimen/dp_10"
             android:id="@+id/cv_currency"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,20 +32,17 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
+                    android:layout_marginStart="14dp"
                     android:text="@string/title_currency"
                     android:textSize="@dimen/textSize13sp"
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textStyle="bold" />
+                    android:textColor="@color/color_9FADC6_535D76" />
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="14dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/color_191919_EEEFF0" />
-
+                <ImageView
+                    android:id="@+id/iv_crypto_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:src="@drawable/ic_crypto" />
                 <TextView
                     android:id="@+id/txv_currency"
                     android:layout_width="0dp"
@@ -79,6 +76,7 @@
             app:cardElevation="0dp">
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:gravity="center"
@@ -87,10 +85,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
+                    android:layout_marginStart="14dp"
                     android:text="@string/title_recharge_account"
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textStyle="bold"
+                    android:textColor="@color/color_9FADC6_535D76"
                     android:textSize="@dimen/textSize13sp" />
 
                 <View
@@ -127,12 +124,116 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             app:cardBackgroundColor="@color/color_191919_FCFCFC"
             app:cardCornerRadius="5dp"
             app:cardElevation="0dp">
-
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingStart="14dp"
+                android:paddingTop="20dp"
+                android:paddingEnd="20dp"
+                android:paddingBottom="14dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/title_recharge_address"
+                        android:textColor="@color/color_9FADC6_A5A9B3"
+                        android:textSize="@dimen/textSize14sp" />
+
+                    <TextView
+                        android:paddingEnd="@dimen/dp_10"
+                        android:id="@+id/txv_payee"
+                        android:layout_width="0dp"
+                        android:layout_marginStart="@dimen/dp_10"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/color_D2E4FF_414655"
+                        android:textSize="@dimen/textSize12sp"
+                        tools:text="TCZVMNd1D42qcweFSahY2NtWW2DCt8KR7GJ" />
+
+                    <Button
+                        android:id="@+id/btn_qr_copy"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="22dp"
+                        android:layout_marginEnd="12dp"
+                        android:background="@drawable/bg_radius_2_button_dusk_stroke"
+                        android:gravity="center"
+                        android:minWidth="48dp"
+                        android:paddingHorizontal="4dp"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:text="@string/btn_copy"
+                        android:textAllCaps="false"
+                        android:textColor="@color/color_025BE8"
+                        android:textSize="@dimen/textSize12sp" />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/log_detail_reason"
+                        android:textColor="@color/color_E44438_e44438"
+                        android:textSize="@dimen/textSize14sp"
+                        android:visibility="visible"/>
+                    <TextView
+                        android:paddingEnd="@dimen/dp_10"
+                        android:id="@+id/txv_remark"
+                        android:layout_width="0dp"
+                        android:layout_marginStart="@dimen/margin_30"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/color_E44438_e44438"
+                        android:textSize="@dimen/textSize12sp"
+                        tools:text="TCZVMNd1D42qcweFSahY2NtWW2DCt8KR7GJ" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_qr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/title_qr_pay"
+                        android:textColor="@color/color_9FADC6_A5A9B3"
+                        android:textSize="@dimen/textSize14sp" />
+                    <ImageView
+                        android:id="@+id/img_qr"
+                        android:layout_marginStart="@dimen/margin_20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="110dp"
+                        android:adjustViewBounds="true"
+                        android:maxWidth="110dp"
+                        android:maxHeight="110dp"
+                        android:scaleType="fitCenter"
+                        tools:src="@drawable/ic_close_gray_blue" />
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+          <!--  <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -225,21 +326,24 @@
                 </LinearLayout>
 
             </LinearLayout>
-
+-->
         </androidx.cardview.widget.CardView>
         <!-- 充值個數 -->
         <org.cxct.sportlottery.ui.login.LoginEditText
-            app:cvTextColor="@color/color_9BB3D9_535D76"
+
+            app:cvTextColor="@color/color_9FADC6_535D76"
             android:id="@+id/et_recharge_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:paddingStart="4dp"
             app:cvHint="@string/edt_hint_crypto_pay_count"
             app:cvInputType="number"
             app:cvTitle="@string/txv_recharge_count" />
 
         <TextView
             android:id="@+id/tv_rate"
+            android:layout_marginStart="@dimen/margin_14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hint_rate"
@@ -247,6 +351,7 @@
             android:textSize="@dimen/textSize12sp" />
 
         <TextView
+            android:layout_marginStart="@dimen/margin_14"
             android:id="@+id/tv_recharge_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -261,7 +366,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:cvTextColor="@color/color_9BB3D9_535D76"
+            android:paddingStart="4dp"
+            app:cvTitleTextStyle ="normal"
+            app:cvTextColor="@color/color_9FADC6_535D76"
             app:cvHint="@string/hint_transaction_id"
             app:cvInputType="text"
             app:cvTitle="@string/title_transaction_id" />
@@ -284,52 +391,80 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
+                    android:layout_marginStart="14dp"
                     android:gravity="center_vertical"
                     android:maxLines="1"
                     android:text="@string/title_recharge_time"
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textStyle="bold"
+                    android:textColor="@color/color_D2E4FF_414655"
                     android:textSize="@dimen/textSize13sp" />
 
+             <LinearLayout
+                 android:id="@+id/ll_recharge_time"
+                 android:gravity="center|end"
+                 android:layout_width="0dp"
+                 android:layout_weight="1"
+                 android:layout_height="match_parent"
+                 android:orientation="horizontal">
+                 <TextView
+                     android:id="@+id/txv_recharge_time"
+                     android:layout_width="wrap_content"
+                     android:layout_height="match_parent"
+                     android:background="@null"
+                     android:gravity="center"
+                     android:maxLines="1"
+                     android:singleLine="true"
+                     android:textColor="@color/color_9FADC6_535D76"
+                     android:textSize="@dimen/textSize12sp"
+                     app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                     app:autoSizeMinTextSize="@dimen/textSize8sp"
+                     tools:text="2020-13-25" />
+                 <ImageView
+                     android:layout_width="35dp"
+                     android:layout_height="45dp"
+                     android:contentDescription="@null"
+                     android:scaleType="centerInside"
+                     android:src="@drawable/ic_arrow_gray" />
+             </LinearLayout>
                 <View
+                    android:background="@color/color_272F41_E3E8EE"
+                    android:layout_marginVertical="@dimen/margin_12"
                     android:layout_width="1dp"
-                    android:layout_height="14dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/color_191919_EEEFF0" />
-
-
-                <TextView
-                    android:id="@+id/txv_recharge_time"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="match_parent"/>
+                <LinearLayout
+                    android:id="@+id/ll_recharge_time2"
+                    android:gravity="center"
+                    android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:background="@null"
-                    android:gravity="start|center_vertical"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize12sp"
-                    app:autoSizeMaxTextSize="@dimen/textSize12sp"
-                    app:autoSizeMinTextSize="@dimen/textSize8sp"
-                    tools:text="2020-13-25 19:35:35 (GMT+8)" />
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
 
-                <ImageView
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_marginEnd="16dp"
-                    android:contentDescription="@null"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/ic_calendar_v4" />
-
+                    <TextView
+                        android:id="@+id/txv_recharge_time2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@null"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textColor="@color/color_9FADC6_535D76"
+                        android:textSize="@dimen/textSize12sp"
+                        app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                        app:autoSizeMinTextSize="@dimen/textSize8sp"
+                        tools:text="19:35:35 (GMT+8)" />
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="45dp"
+                        android:contentDescription="@null"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_arrow_gray" />
+                </LinearLayout>
             </LinearLayout>
 
 
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:layout_marginStart="@dimen/margin_14"
             android:id="@+id/tv_fee_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -339,6 +474,7 @@
             android:textSize="@dimen/textSize12sp" />
 
         <TextView
+            android:layout_marginStart="@dimen/margin_14"
             android:id="@+id/tv_fee_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -347,6 +483,7 @@
             android:textColor="@color/color_E44438_e44438"
             android:textSize="@dimen/textSize12sp" />
         <androidx.cardview.widget.CardView
+            android:layout_marginHorizontal="@dimen/margin_14"
             app:cardCornerRadius="@dimen/margin_8"
             android:layout_marginTop="@dimen/dp_10"
             android:layout_width="match_parent"
@@ -362,6 +499,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:textColor="@color/color_9FADC6_535D76"
                     android:layout_marginLeft="@dimen/dp_4"
                     android:text="@string/title_upload_pic"
                     android:textSize="@dimen/textSize16sp"
