--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -169,4 +169,6 @@
     <color name="color_181922_FFFFFF">@color/color_181922</color>
     <color name="color_79839F_F7F8FC">@color/color_79839F</color>
     <color name="color_272F41_E3E8EE">@color/color_272F41</color>
+    <color name="color_D2E4FF_414655">@color/color_D2E4FF</color>
+    <color name="color_9FADC6_A5A9B3">@color/color_9FADC6</color>
 </resources>
