--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -498,4 +498,8 @@
     <!--反馈详情输入框背景色-->
     <color name="color_79839F_F7F8FC">@color/color_F7F8FC</color>
     <color name="color_272F41_E3E8EE">@color/color_E3E8EE</color>
+   <!-- 存款页面文字标题-->
+    <color name="color_D2E4FF_414655">@color/color_414655</color>
+    <!--扫描模块文字标题颜色-->
+    <color name="color_9FADC6_A5A9B3">@color/color_A5A9B3</color>
 </resources>
