--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_181922_FFFFFF"
+    android:background="@color/color_181922_F0F5FA"
     android:orientation="vertical"
     tools:context=".ui.profileCenter.profile.ProfileActivity">
 
@@ -24,6 +24,7 @@
         android:overScrollMode="never">
 
         <LinearLayout
+            android:background="@color/color_181922_F0F5FA"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -32,15 +33,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/color_191919_FCFCFC"
                 android:orientation="vertical">
 
 
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:id="@+id/btn_head"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="14dp"
+                   android:paddingStart="@dimen/margin_14"
                     android:orientation="vertical">
 
                     <TextView
@@ -50,7 +51,7 @@
                         android:layout_weight="1"
                         android:paddingTop="@dimen/margin_14"
                         android:text="@string/avatar"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_D2E4FF_414655"
                         android:textSize="@dimen/textSize14sp" />
 
 
@@ -77,6 +78,8 @@
                             android:id="@+id/btn_edit_nickname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginEnd="-5dp"
+                            android:layout_marginBottom="-3dp"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentBottom="true"
                             android:contentDescription="@null"
@@ -86,12 +89,11 @@
                     </RelativeLayout>
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/color_F0F5FA" />
+
 
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
+                    android:layout_marginTop="@dimen/margin_10"
                     android:id="@+id/btn_nickname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -106,7 +108,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/nickname"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -118,7 +120,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="ia***18" />
 
@@ -143,6 +145,7 @@
                     android:background="@color/color_F0F5FA" />
 
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:id="@+id/btn_pwd_setting"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -158,7 +161,7 @@
                         android:layout_marginEnd="10dp"
 
                         android:text="@string/password_setting"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
                     <TextView
                         android:id="@+id/tv_pass_word"
@@ -169,7 +172,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         android:text="@string/reset_password" />
                     <ImageView
@@ -181,12 +184,10 @@
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/color_F0F5FA" />
+
 
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -201,7 +202,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/member_account"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -213,7 +214,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="ianlee0518" />
 
@@ -226,6 +227,7 @@
                     android:background="@color/color_F0F5FA" />
 
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -238,7 +240,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/id"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -250,7 +252,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="235291" />
 
@@ -263,6 +265,7 @@
                     android:background="@color/color_F0F5FA" />
 
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:id="@+id/ll_real_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -277,7 +280,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/real_name"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -289,7 +292,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="ianlee051**" />
 
@@ -306,12 +309,11 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/color_F0F5FA" />
+
                 <!--  QQ號碼  -->
                 <LinearLayout
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:id="@+id/ll_qq_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -326,7 +328,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/qq_number"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -338,7 +340,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="1022423383" />
 
@@ -363,6 +365,7 @@
 
                 <!--  郵箱  -->
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:id="@+id/ll_e_mail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -377,7 +380,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/e_mail"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -389,7 +392,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="ianlee051＠gmail.com" />
 
@@ -414,6 +417,7 @@
 
                 <!--  手機號碼  -->
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:id="@+id/ll_phone_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -428,7 +432,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/phone_number"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -440,7 +444,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="1022423383" />
 
@@ -464,7 +468,9 @@
                     android:background="@color/color_F0F5FA" />
 
                 <!--  微信  -->
+
                 <LinearLayout
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:id="@+id/ll_wechat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -479,7 +485,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/we_chat"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -491,7 +497,7 @@
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="2443875459" />
 
@@ -508,12 +514,10 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/color_F0F5FA" />
 
                 <LinearLayout
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:background="@color/color_1D1F2D_FFFFFF"
                     android:id="@+id/ll_verified"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -528,7 +532,7 @@
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="4dp"
                         android:text="@string/identity"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9FADC6_535D76"
                         android:textSize="@dimen/textSize14sp" />
 
                     <TextView
@@ -540,7 +544,7 @@
                         android:gravity="end"
                         android:text="@string/not_verify"
                         android:textAlignment="textEnd"
-                        android:textColor="@color/color_939393_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp" />
 
                     <ImageView
@@ -599,6 +603,7 @@
                 android:layout_marginStart="@dimen/margin_20"
                 android:layout_marginTop="@dimen/margin_20"
                 android:layout_marginEnd="@dimen/margin_20"
+                android:layout_marginBottom="@dimen/margin_30"
                 android:background="@drawable/ic_sign_out"
                 android:text="@string/sign_out"
                 android:textColor="@color/exo_white" />
