--- a/app/src/main/res/layout/activity_setting_center.xml
+++ b/app/src/main/res/layout/activity_setting_center.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
     android:orientation="vertical"
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:layout_below="@+id/custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -82,4 +83,14 @@
                 android:padding="@dimen/margin_15" />
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_btn_service"
+        android:src="@drawable/icon_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="@dimen/margin_14"
+       android:layout_marginBottom="55dp"/>
+</RelativeLayout>
