--- a/app/src/main/res/layout/hot_live_match_include.xml
+++ b/app/src/main/res/layout/hot_live_match_include.xml
@@ -111,7 +111,7 @@
             android:background="@color/color_E3E8EE"
             app:layout_constraintTop_toBottomOf="@+id/rv_match_title" />
 
-        <ImageView
+        <com.pili.pldroid.player.widget.PLVideoView
             android:id="@+id/iv_publicity"
             android:layout_width="0dp"
             android:layout_height="104dp"
@@ -155,7 +155,6 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="@+id/iv_publicity"
             app:layout_constraintEnd_toEndOf="@+id/iv_publicity"
-
             app:layout_constraintStart_toStartOf="@+id/iv_publicity">
 
             <TextView
