--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -151,12 +151,15 @@
     <LinearLayout
         android:id="@+id/ll_come_back"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         android:layout_alignParentEnd="true"
         android:orientation="horizontal"
         android:gravity="center"
         android:background="@drawable/btn_comeback"
+        android:paddingStart="8dp"
+        android:paddingEnd="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
