--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -870,7 +870,7 @@
                                     android:id="@+id/tv_version"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/current_version"
+                                    android:text="@string/app_download"
                                     android:textColor="@color/color_6C7BA8"
                                     android:textSize="@dimen/textSize14sp" />
 
@@ -904,6 +904,7 @@
                                     <ImageView
                                         android:id="@+id/iv_version_new"
                                         android:visibility="gone"
+                                        android:layout_marginLeft="1dp"
                                         android:layout_width="31dp"
                                         android:layout_height="16dp"
                                         android:src="@drawable/icon_tag_new" />
