--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -555,7 +555,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_league_odd_btn_pager_main"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:nestedScrollingEnabled="false"
                     android:overScrollMode="never"
